appId: com.tihonshkel.x018BY
env:
  E2E_LETTER: Дорогой будущий я, будь счастлив!
---
- runFlow:
    file: ../03-album-create/create-birthday-dfa34.yaml
- tapOn:
    id: page-card-48
- extendedWaitUntil:
    visible:
      id: unified-editor-save
    timeout: 15000
- tapOn:
    text: 'Письмо во взрослую жизнь'
    optional: true
- inputText: ${E2E_LETTER}
- tapOn:
    id: unified-editor-save
- extendedWaitUntil:
    visible:
      text: 'Предпросмотр'
    timeout: 20000
- back
- assertVisible:
    id: album-export-button
